--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,35 @@
-# local package
--e .
+# Core ML/data dependencies
+xgboost==3.0.0
+polars==1.24.0
+pandas==2.2.3
+optuna==4.3.0
+numpy==2.2.3
+scikit-learn==1.6.1
+scipy==1.15.2
+pyarrow==19.0.1
 
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+# Dashboard
+plotly==6.0.1
+dash==3.0.3
+dash-bootstrap-components==2.0.2
+dash-bootstrap-templates==2.1.0
+dash-table==5.0.0
+
+# Dev tools
+flake8==7.0.0
+black==25.1.0
+python-dotenv==1.1.0
+rich==14.0.0
+requests==2.32.3
+
+# Kaggle Submission
+kaggle==1.7.4.2
+
+# YAML/Config
+PyYAML==6.0.2
+
+# Visualization (optional, for notebooks)
+matplotlib==3.10.1
+
+# Editable local package (for development)
+-e .
